tests/base/parser/bad/lib/lmodule-library-cid-contract.scillib
scilla_version 0

library TestLib

contract Test
